fix for symfony 4

--- a/Doctorsender/APIBundle/Resources/config/services.yml
+++ b/Doctorsender/APIBundle/Resources/config/services.yml
@@ -1,4 +1,4 @@
 services:
     doctorsender:
         class: Doctorsender\APIBundle\Services\Doctorsender
-        arguments: [%doctorsender.url%,%doctorsender.user%,%doctorsender.token%]
+        arguments: ['%doctorsender.url%','%doctorsender.user%','%doctorsender.token%']
